--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:27pm Sun 14th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:33pm Sun 14th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:26pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $111,560.37 (+$292.86) @ 1:01pm</span><span class="">ADS: [hidden] @ 1:01pm</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:30pm</td>
+	<td class="accounts"><span class=" hidden">ADS: $110,198.99 (-$1,068.52) @ 1:30pm</span><span class="">ADS: [hidden] @ 1:30pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;1:26pm</td>
-	<td class="accounts">JPB: $14,638.78 (-$136.50) @ 1:10pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;1:30pm</td>
+	<td class="accounts">JPB: $14,667.89 (-$107.40) @ 1:26pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;1:26pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;1:30pm</td>
 	<td class="accounts">CBA: $79,736.73 ($0.00) @ 1:09pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:26pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:30pm</td>
 	<td class="accounts">ANZ: $6,890.17 ($0.00) @ 1:12pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;1:27pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;1:31pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;1:27pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=635Gb RAM=46% @ &nbsp;1:26pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;1:31pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=635Gb RAM=46% @ &nbsp;1:30pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;1:27pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 17Gb RAM=26% @ &nbsp;1:27pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;1:31pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 17Gb RAM=26% @ &nbsp;1:32pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:27pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:31pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:27pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:31pm</td>
 	<td class="todo">Jun 16 (+2d) [M] City West Water - B</td>
 	</tr>
 	
