--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:01am Tue 16th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:06am Tue 16th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,22 +95,22 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:58am</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:00am</td>
 	<td class="accounts"><span class="">ADS: $113,453.34 (-$268.93) @ 8:45am</span><span class=" hidden">ADS: [hidden] @ 8:45am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;8:58am</td>
-	<td class="accounts">JPB: $14,380.48 (-$192.00) @ 9:43pm</td>
+	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;9:00am</td>
+	<td class="accounts">JPB: $14,380.48 ($0.00) @ 9:43pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#11036;</span> @ &nbsp;8:58am</td>
+	<td class="projects">OT1 <span class="emoji">&#11036;</span> @ &nbsp;9:00am</td>
 	<td class="accounts">CBA: $79,736.73 ($0.00) @ 8:42am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:58am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:00am</td>
 	<td class="accounts">ANZ: $8,090.17 (+$1,200.00) @ 8:46am</td>
 	</tr>
 	
@@ -121,12 +121,12 @@
 	
 	<tr>
 	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
-	<td class="computers">Albert:<span class="emoji">&#9940;</span> HDD=602Gb RAM=98% @ &nbsp;8:58am</td>
+	<td class="computers">Albert:<span class="emoji">&#9940;</span> HDD=602Gb RAM=98% @ &nbsp;9:00am</td>
 	</tr>
 	
 	<tr>
 	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;8:59am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 12Gb RAM=29% @ &nbsp;8:59am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 12Gb RAM=38% @ &nbsp;9:05am</td>
 	</tr>
 	
 	<tr>
