--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:26pm Tue 16th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ &nbsp;</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,55 +95,55 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:24pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $112,611.22 (-$1,030.21) @ 12:08pm</span><span class="">ADS: [hidden] @ 12:08pm</span></td>
+	<td class="projects">&nbsp;</td>
+	<td class="accounts"><span class=" hidden">&nbsp;</span><span class="">&nbsp;</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:24pm</td>
-	<td class="accounts">JPB: $14,311.78 (-$68.70) @ 12:17pm</td>
+	<td class="projects">&nbsp;</td>
+	<td class="accounts">&nbsp;</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:24pm</td>
-	<td class="accounts">CBA: $79,778.37 (+$41.64) @ 12:15pm</td>
+	<td class="projects">&nbsp;</td>
+	<td class="accounts">&nbsp;</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:24pm</td>
-	<td class="accounts">ANZ: $7,762.30 (-$327.87) @ 12:18pm</td>
+	<td class="projects">&nbsp;</td>
+	<td class="accounts">&nbsp;</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 12:24pm</td>
+	<td class="projects">&nbsp;</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 12:24pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=601Gb RAM=35% @ 12:24pm</td>
+	<td class="projects">&nbsp;</td>
+	<td class="computers">&nbsp;</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:24pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 13Gb RAM=50% @ 12:25pm</td>
+	<td class="projects">&nbsp;</td>
+	<td class="computers">&nbsp;</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:24pm</td>
+	<td class="projects">&nbsp;</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 12:24pm</td>
-	<td class="todo">Jul 1 (+15d) [M] OC Fee - Notice Pay</td>
+	<td class="projects">&nbsp;</td>
+	<td class="todo">&nbsp;</td>
 	</tr>
 	
 	<tr>
 	<td class="projects" align="center">
 	<a href="index.html">show</a>|<a href="index-hide.html">hide</a>|<a href="index-boss.html">boss</a>
 	</td>
-	<td class="todo">Jul 1 (+15d) [M] OC Fee - Notice Pay</td>
+	<td class="todo">&nbsp;</td>
 	</tr>
 	
 	</table>
