--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:56pm Tue 16th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:04pm Tue 16th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:53pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $112,662.23 (-$979.20) @ 12:32pm</span><span class="">ADS: [hidden] @ 12:32pm</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:03pm</td>
+	<td class="accounts"><span class=" hidden">ADS: $112,940.71 (-$700.72) @ 1:02pm</span><span class="">ADS: [hidden] @ 1:02pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:53pm</td>
-	<td class="accounts">JPB: $14,231.83 (-$148.65) @ 12:45pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;1:03pm</td>
+	<td class="accounts">JPB: $14,174.83 (-$205.65) @ 12:57pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:53pm</td>
-	<td class="accounts">CBA: $79,778.37 (+$41.64) @ 12:33pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;1:03pm</td>
+	<td class="accounts">CBA: $79,778.37 (+$41.64) @ 1:04pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:53pm</td>
-	<td class="accounts">ANZ: $7,762.30 (-$327.87) @ 12:32pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:03pm</td>
+	<td class="accounts">ANZ: $7,762.30 (-$327.87) @ 1:03pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 12:55pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;1:03pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 12:55pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=601Gb RAM=35% @ 12:53pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;1:03pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=601Gb RAM=35% @ &nbsp;1:03pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:55pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 16Gb RAM=28% @ 12:55pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;1:03pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 16Gb RAM=28% @ &nbsp;1:03pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:55pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:03pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 12:55pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:03pm</td>
 	<td class="todo">Jul 1 (+15d) [M] OC Fee - Notice Pay</td>
 	</tr>
 	
