--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:59pm Tue 16th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 2:07pm Tue 16th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:54pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $113,227.50 (-$413.93) @ 1:31pm</span><span class="">ADS: [hidden] @ 1:31pm</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;2:03pm</td>
+	<td class="accounts"><span class=" hidden">ADS: $112,977.31 (-$664.12) @ 2:01pm</span><span class="">ADS: [hidden] @ 2:01pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;1:54pm</td>
-	<td class="accounts">JPB: $14,202.73 (-$177.75) @ 1:45pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;2:03pm</td>
+	<td class="accounts">JPB: $14,417.23 (+$36.75) @ 2:01pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;1:54pm</td>
-	<td class="accounts">CBA: $79,778.37 (+$41.64) @ 1:34pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;2:03pm</td>
+	<td class="accounts">CBA: $79,771.43 (+$34.70) @ 2:04pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:54pm</td>
-	<td class="accounts">ANZ: $7,762.30 (-$327.87) @ 1:34pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;2:03pm</td>
+	<td class="accounts">ANZ: $7,762.30 (-$327.87) @ 2:04pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;1:58pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;2:06pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;1:58pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=601Gb RAM=35% @ &nbsp;1:54pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;2:06pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=601Gb RAM=35% @ &nbsp;2:03pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;1:58pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 12Gb RAM=39% @ &nbsp;1:58pm</td>
+	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;2:06pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 12Gb RAM=39% @ &nbsp;2:06pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:58pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;2:06pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:58pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;2:06pm</td>
 	<td class="todo">Jul 1 (+15d) [M] OC Fee - Notice Pay</td>
 	</tr>
 	
