--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 11:47am Wed 17th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 11:54am Wed 17th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 11:44am</td>
-	<td class="accounts"><span class="">ADS: $112,284.12 (-$90.87) @ 11:19am</span><span class=" hidden">ADS: [hidden] @ 11:19am</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 11:51am</td>
+	<td class="accounts"><span class="">ADS: $112,569.11 (+$194.12) @ 11:48am</span><span class=" hidden">ADS: [hidden] @ 11:48am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 11:44am</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 11:51am</td>
 	<td class="accounts">JPB: $14,334.14 (-$37.50) @ 11:41am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 11:44am</td>
-	<td class="accounts">CBA: $79,785.31 ($0.00) @ 11:21am</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 11:51am</td>
+	<td class="accounts">CBA: $79,778.37 (-$6.94) @ 11:51am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 11:44am</td>
-	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 11:20am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 11:51am</td>
+	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 11:50am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 11:45am</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 11:54am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 11:45am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=585Gb RAM=49% @ 11:44am</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 11:54am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=585Gb RAM=49% @ 11:51am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 11:45am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 15Gb RAM=35% @ 11:45am</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 11:54am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 14Gb RAM=35% @ 11:54am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 11:45am</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 11:54am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 11:45am</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 11:54am</td>
 	<td class="todo">Jul 1 (+14d) [M] OC Fee - Notice Pay</td>
 	</tr>
 	
