--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:11am Thu 18th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:18am Thu 18th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,22 +95,22 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:10am</td>
-	<td class="accounts"><span class="">ADS: $114,829.57 (+$2,454.58) @ 8:44am</span><span class=" hidden">ADS: [hidden] @ 8:44am</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:14am</td>
+	<td class="accounts"><span class="">ADS: $114,697.42 ($0.00) @ 9:13am</span><span class=" hidden">ADS: [hidden] @ 9:13am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;9:10am</td>
+	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;9:14am</td>
 	<td class="accounts">JPB: $13,957.64 ($0.00) @ 9:43pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#11036;</span> @ &nbsp;9:10am</td>
+	<td class="projects">OT1 <span class="emoji">&#11036;</span> @ &nbsp;9:14am</td>
 	<td class="accounts">CBA: $79,778.37 ($0.00) @ 9:09am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:10am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:14am</td>
 	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 9:05am</td>
 	</tr>
 	
@@ -121,12 +121,12 @@
 	
 	<tr>
 	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=568Gb RAM=85% @ &nbsp;9:10am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=568Gb RAM=84% @ &nbsp;9:14am</td>
 	</tr>
 	
 	<tr>
 	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;8:59am</td>
-	<td class="computers">Spring:<span class="emoji">&#9940;</span> HDD=  8Gb RAM=57% @ &nbsp;9:10am</td>
+	<td class="computers">Spring:<span class="emoji">&#9940;</span> HDD=  2Gb RAM=56% @ &nbsp;9:16am</td>
 	</tr>
 	
 	<tr>
