--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:56am Thu 18th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 10:02am Thu 18th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:52am</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 10:01am</td>
 	<td class="accounts"><span class=" hidden">ADS: $114,810.34 (+$112.92) @ 9:42am</span><span class="">ADS: [hidden] @ 9:42am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;9:52am</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 10:01am</td>
 	<td class="accounts">JPB: $13,957.64 ($0.00) @ 9:51am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;9:52am</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 10:01am</td>
 	<td class="accounts">CBA: $79,778.37 ($0.00) @ 9:39am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:52am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 10:01am</td>
 	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 9:36am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;9:55am</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 10:00am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;9:55am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=568Gb RAM=59% @ &nbsp;9:52am</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 10:00am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=568Gb RAM=59% @ 10:01am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;9:55am</td>
-	<td class="computers">Spring:<span class="emoji">&#9940;</span> HDD=  1Gb RAM=88% @ &nbsp;9:56am</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 10:00am</td>
+	<td class="computers">Spring:<span class="emoji">&#9940;</span> HDD=  8Gb RAM=89% @ 10:00am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;9:55am</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 10:00am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:55am</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 10:00am</td>
 	<td class="todo">Jul 1 (+13d) [M] OC Fee - Notice Pay</td>
 	</tr>
 	
